[tool.poetry]
name = "aiohttp-chat"
version = "0.1.0"
description = "A simple chat server and client written in aiohttp."
authors = ["Jonas Krüger Svensson <jonas-ks@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = {extras = ["speedups"], version = "^3.6.2"}   # Aiohttp with speedup libraries. Recommended.
black = "^19.10b0"                                      # Used for formatting only
aioconsole = "^0.2.1"                                   # In order to read terminal input asynchronous

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(\.eggs|\.git|\.hg|\.mypy_cache|\.tox|\.venv|\venv|\__pycache__)
'''